# programming_exercises

./: .gitignore  README.md
PathFinding/: .gitignore  build.gradle  settings.gradle  test.txt
berlin_clock/: Makefile
berlin_clock/src/: BerlinTime.cpp  BerlinTime.h  Time.h  main.cpp
bmhsearch/: bmhsearch.c  bmhsearch.h  main.c
c/algorithms/: trees.c
cpp/algorithms/quick_find/: CMakeLists.txt  QuickFindTest.cpp
cpp/algorithms/quick_sort/: main.cpp
digisparkUsbRgb/digispark/: digispark.ino
digisparkUsbRgb/kernel/: Makefile  digi_rgb.c
digisparkUsbRgb/python/: DigiRGB.py
dontpanic/DontPanic/: main.cpp
hobbyking_watcher/: hobbyking_watcher.py
python/advent_of_code_2020/: 10_12-part1.py  11_12-part1.py  11_12-part2.py  12_12-part1.py  12_12-part2.py  13_12-part1.py  13_12-part2.py  13_12_part2.txt  14_12-part1.py  14_12-part2.py  16_12-part1.py  18_12-part1.py  1_12-part1.py  1_12-part2.py  20_12-part1.py  25_12.part1.py  2_12-part1.py  2_12-part2.py  3_12-part1.py  3_12-part2.py  4_12-part1.py  4_12-part2.py  4_12_invalid.txt  5_12-part1.py  5_12-part2.py  5_12_corner.txt  6_12-part1.py  6_12-part2.py  7_12-part1.py  7_12-part2.py  8_12-part1.py  8_12-part2.py  9_12-part1.py
python/advent_of_code_2021/: 1-part2.py  1.py  2-part2.py  2.py  3-part2.py  3.py  4-part2.py  4.py  5.py
python/advent_of_code_2023/: 1-part2.py  1.py  2-part2.py  2.py  4.py
python/clash_of_code/: ordinalArrayToString.py  pyramidOfIntegers.py  rot13.py
quicksort/QuickSort/: CMakeLists.txt
task_processor/: Task.cpp  task_executor
trees/c/: trees.c
(+60 files in other folders)
